--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="tv_shows">TV Shows</string>
     <string name="movies">Movies</string>
     <string name="people">People</string>
+    <string name="login">Login</string>
+    <string name="dark_mode">Dark mode</string>
+    <string name="settings">Settings</string>
 </resources>
