--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="login">Login</string>
     <string name="dark_mode">Dark mode</string>
     <string name="settings">Settings</string>
+    <string name="tmdb">TMDB</string>
+    <string name="join_community">Join the community</string>
+    <string name="join_benefits">In order to use extended features and rating capabilities of TMDB, as well as get personal recommendations you will need to login to your account. If you do not have an account, registering for an account is free and simple.</string>
+    <string name="or">or</string>
+    <string name="join_tmdb">Join TMDB</string>
 </resources>
