--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="people">People</string>
     <string name="login">Login</string>
     <string name="dark_mode">Dark mode</string>
+    <string name="light_mode">Light mode</string>
     <string name="settings">Settings</string>
     <string name="tmdb">TMDB</string>
     <string name="join_community">Join the community</string>
