--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="join_benefits">In order to use extended features and rating capabilities of TMDB, as well as get personal recommendations you will need to login to your account. If you do not have an account, registering for an account is free and simple.</string>
     <string name="or">or</string>
     <string name="join_tmdb">Join TMDB</string>
+    <string name="app_version">TMDB for Android v%s (%s)</string>
+    <string name="account">Account</string>
+    <string name="watchlist">Watchlist</string>
+    <string name="favorite">Favorite</string>
+    <string name="recommendations">Recommendations</string>
+    <string name="language">Language</string>
+    <string name="appearance">Appearance</string>
+    <string name="help">Help</string>
+    <string name="support_forums">Support Forums</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
