--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,12 @@
     <string name="help">Help</string>
     <string name="support_forums">Support Forums</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="lists">Lists</string>
+    <string name="welcome">Welcome.</string>
+    <string name="explore_now">Millions of movies, TV shows and people to discover. Explore now.</string>
+    <string name="search_label">Search for movies, tv shows, or people…</string>
+    <string name="trending">Trending</string>
+    <string name="join_today">Join Today</string>
+    <string name="join_today_benefits">Get access to maintain your own custom personal lists, track what you\'ve seen and search and filter for what to watch next — regardless if it\'s in theatres, on TV or available on popular streaming services like Netflix, Amazon Prime Video, Disney Plus, Apple TV Plus, and Hulu.</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
