--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">The Movie Database (TMDB)</string>
+    <string name="all">All</string>
     <string name="tv_shows">TV Shows</string>
     <string name="movies">Movies</string>
     <string name="people">People</string>
@@ -25,7 +26,7 @@
     <string name="lists">Lists</string>
     <string name="welcome">Welcome.</string>
     <string name="explore_now">Millions of movies, TV shows and people to discover. Explore now.</string>
-    <string name="search_label">Search for movies, tv shows, or people…</string>
+    <string name="search_placeholder">Search for movies, tv shows, or people…</string>
     <string name="trending">Trending</string>
     <string name="join_today">Join Today</string>
     <string name="join_today_benefits">Get access to maintain your own custom personal lists, track what you\'ve seen and search and filter for what to watch next — regardless if it\'s in theatres, on TV or available on popular streaming services like Netflix, Amazon Prime Video, Disney Plus, Apple TV Plus, and Hulu.</string>
@@ -33,4 +34,6 @@
     <string name="starring">Starring:</string>
     <string name="more">more</string>
     <string name="runtime">%dh %dmin</string>
+    <string name="empty_search">Oh man. We don\'t have that.</string>
+    <string name="empty_search_suppose">Try search for another movie, show, or person.</string>
 </resources>
