--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,14 @@
     <string name="more">more</string>
     <string name="runtime">%dh %dmin</string>
     <string name="empty_search">Oh man. We don\'t have that.</string>
+    <string name="nothing_to_show">Nothing to show.</string>
     <string name="empty_search_suggest">Try search for another movie, show, or person.</string>
     <string name="part_of_collection">Part of the %s</string>
     <string name="includes">Includes %s</string>
+    <string name="number_of_movies">Number of movies</string>
+    <string name="average_rating">Average rating</string>
+    <string name="sort_by">Sort by</string>
+    <string name="rating">Rating</string>
+    <string name="release_date">Release date</string>
+    <string name="how">How?</string>
 </resources>
