--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="rating">Rating</string>
     <string name="release_date">Release date</string>
     <string name="empty"/>
+    <string name="popular_people">Popular people</string>
 </resources>
