--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,8 @@
     <string name="starring">Starring:</string>
     <string name="director">Director:</string>
     <string name="more">more</string>
-    <string name="runtime">%dh %dmin</string>
+    <string name="runtime_full">%dh %dmin</string>
+    <string name="runtime_min">%dmin</string>
     <string name="empty_search">Oh man. We don\'t have that.</string>
     <string name="nothing_to_show">Nothing to show.</string>
     <string name="empty_search_suggest">Try search for another movie, show, or person.</string>
@@ -48,4 +49,8 @@
     <string name="release_date">Release date</string>
     <string name="empty"/>
     <string name="popular_people">Popular people</string>
+    <string name="episodes">Episodes</string>
+    <string name="available">Available</string>
+    <string name="overview">Overview</string>
+    <string name="no_episodes">There are no episodes added to this season.</string>
 </resources>
