--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="rent_buy_available">Available to Rent or Buy</string>
     <string name="watch_now">Watch Now</string>
     <string name="watch_link_not_provided">TMDB API does not provide the actual deep links to the content, so please proceed to the official TMDB website.</string>
+    <string name="genres">Genres:</string>
 </resources>
