New rating ui, some fiber adjustments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="dark">Dark</string>
     <string name="theme">Theme</string>
     <string name="corners">Corners</string>
+    <string name="rate_now">Rate now</string>
 </resources>
