--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="more">more</string>
     <string name="runtime_full">%dh %dmin</string>
     <string name="runtime_min">%dmin</string>
+    <string name="runtime_h">%dh</string>
     <string name="empty_search">Oh man. We don\'t have that.</string>
     <string name="nothing_to_show">Nothing to show.</string>
     <string name="empty_search_suggest">Try search for another movie, show, or person.</string>
