--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="last_episode">Last Episode</string>
     <string name="next_episode">Next episode</string>
     <string name="credits">Credits</string>
+    <string name="stills_pages">%d/%d</string>
 </resources>
