--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="next_episode">Next episode</string>
     <string name="credits">Credits</string>
     <string name="stills_pages">%d/%d</string>
+    <string name="episode_name">%d. %s</string>
 </resources>
