--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="credits">Credits</string>
     <string name="stills_pages">%d/%d</string>
     <string name="episode_name">%d. %s</string>
+    <string name="cast_and_crew"><![CDATA[Cast & Crew]]></string>
 </resources>
