--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="clear">Clear</string>
     <string name="profiles">Profiles</string>
     <string name="image_viewer_count">%d of %d</string>
+    <string name="media">Media</string>
 </resources>
