--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,6 @@
     <string name="media">Media</string>
     <string name="stills">Stills</string>
     <string name="backdrops">Backdrops</string>
+    <string name="reviews">Reviews</string>
+    <string name="review">Review</string>
 </resources>
