--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="backdrops">Backdrops</string>
     <string name="reviews">Reviews</string>
     <string name="review">Review</string>
+    <string name="now_playing">Now Playing</string>
 </resources>
