Episode details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="stills_pages">%d/%d</string>
     <string name="episode_name">%d. %s</string>
     <string name="cast_and_crew"><![CDATA[Cast & Crew]]></string>
-    <string name="guest_stars">Guest Stars</string>
+    <string name="guest_stars">Guest Stars:</string>
     <string name="media_type">Media type</string>
     <string name="department">Department</string>
     <string name="clear">Clear</string>
