--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,7 @@
     <string name="error_backend_connection">Couldn\'t connect to the backend server</string>
     <string name="error_session_id">Error obtaining session ID</string>
     <string name="empty_watchlist">You haven’t added anything yet. Browse our recommendations below and start building your list!</string>
+    <string name="list_public">Public</string>
+    <string name="list_private">Private</string>
+    <string name="updated_at">Updated %s</string>
 </resources>
