--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,11 +153,12 @@
     <string name="error_backend_timeout">Your request to the backend server timed out. Try again</string>
     <string name="error_backend_connection">Couldn\'t connect to the backend server</string>
     <string name="error_session_id">Error obtaining session ID</string>
-    <string name="empty_watchlist">You haven’t added anything yet. Browse our recommendations below and start building your list!</string>
+    <string name="empty_watchlist">You haven’t added anything yet. Browse our recommendations and start building your list!</string>
     <string name="list_public">Public</string>
     <string name="list_private">Private</string>
     <string name="updated_at">Updated %s</string>
     <string name="show_title">Show title</string>
     <string name="additional_nav_item">Additional Navigation Bar Item</string>
     <string name="none">None</string>
+    <string name="empty_recommendations">No recommendations yet! Start by watching or liking some titles, and we’ll tailor suggestions just for you.</string>
 </resources>
